--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -33,6 +33,11 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between:
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: grey;
+    z-index: 1000;
 }
 
 .menu{
